[package]
name = "beerfyi"
version = "0.1.1"
edition = "2021"
authors = ["FYIPedia"]
description = "Beer style guide with BJCP styles, hops, malts, and yeast — async API client for beerfyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/beerfyi-rs"
homepage = "https://beerfyi.com"
documentation = "https://docs.rs/beerfyi"
readme = "README.md"
keywords = ["beer", "bjcp", "hops", "malts", "brewing"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
